--- a/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
+++ b/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
@@ -1,6 +1,3 @@
-
-
-
 <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
     <div class="row">
         <div class="col-lg-12">
@@ -31,60 +28,87 @@
                                 <div class="col-md-6">
 
                                     <div class="form-group">
-                                        <label>Category</label>
-                                        <select class="form-control input-medium">
-                                            <option>Option 1</option>
-                                            <option>Option 2</option>
-                                            <option>Option 3</option>
-                                            <option>Option 4</option>
-                                            <option>Option 5</option>
-                                        </select>
+                                        <label>Category</label>                                    
+                                        <select id="categories" class="form-control input-medium select2-search select2-search--inline">
+                                            <option *ngFor="let item of categories; let i = index" [value]="categories[i].id">
+                                              {{categories[i].name}}
+                                            </option>
+                                          </select>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="email"> Task Name</label>
                                         <input type="email" class="form-control  bsDatepicker" id="email">
-                                      </div>
-                                      <div class="form-group">
-                                        <label for="email">Email address:</label>
-                                        <input type="email" class="form-control" id="email">
-                                      </div>
-                                    <div class="w-100"></div>
+                                    </div>
                                     <div class="form-group">
                                         <label for="email">Email address:</label>
                                         <input type="email" class="form-control" id="email">
-                                      </div>
-                                      <div class="form-group">
-                                        <label for="email">Email address:</label>
-                                        <input type="email" class="form-control" id="email">
-                                      </div>
+                                    </div>
+                                    
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="dateOfBirth">Closing Month</label>
-                                        <input id="dateOfBirth" name="dateOfBirth"
-                                                type="text" bsDatepicker class="form-control" />
-                                      </div>
-                                      <div class="form-group">
+                                         <select class="form-control input-medium">
+                                            <option value="0">January</option>
+                                            <option value="1">Febuary</option>
+                                            <option value="2">March</option>
+                                            <option value="3">April</option>
+                                            <option value="4">May</option>
+                                            <option value="5">June</option>
+                                            <option value="6">July</option>
+                                            <option value="7">August</option>
+                                            <option value="8">September</option>
+                                            <option value="9">October</option>
+                                            <option value="10">November</option>
+                                            <option value="11">December</option>
+                                           
+                                        </select>
+
+                                        <!-- <input id="dateOfBirth" name="dateOfBirth" type="text" bsDatepicker
+                                            class="form-control" /> -->
+                                    </div>
+                                    <div class="form-group">
                                         <label for="email">Assignee Name</label>
                                         <input type="email" class="form-control" id="email">
-                                      </div>
+                                    </div>
                                     <div class="w-100"></div>
                                     <div class="form-group">
                                         <label for="email">Email address:</label>
                                         <input type="email" class="form-control" id="email">
-                                      </div>
-                                      <div class="form-group">
-                                        <label for="email">Email address:</label>
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="email">Comments</label>
                                         <input type="email" class="form-control" id="email">
-                                      </div>
+                                    </div>
+                                            
+                                      
+
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                   
+                                            <div class="form-group">
+                                                <p-editor [(ngModel)]="htmlEditorInput" name="HtmlEditorInput"
+                                                    [style]="{'height':'150px'}"></p-editor>
+                                            </div>
+                                      
+
                                 </div>
                             </div>
 
 
-                           
 
-                            
+
+
+
                         </div>
                         <div class="col-md-4">
 
@@ -96,31 +120,34 @@
                                         <select class="form-control input-medium">
                                             <option>Monthly</option>
                                             <option>Yearly</option>
-                                            
+
                                         </select>
                                     </div>
                                     <div class="form-group">
                                         <label for="email">Due on</label>
                                         <input type="text" class="form-control bsDatepicker" id="email">
-                                      </div>
+                                    </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="email">Number of Months</label>
                                         <input type="text" class="form-control bsDatepicker" id="email">
-                                      </div>
-                                      <div class="form-group">
+                                    </div>
+                                    <div class="form-group">
                                         <label for="email">End of Month</label>
                                         <input type="email" class="form-control" id="email">
-                                      </div>
+                                    </div>
                                 </div>
                             </div>
-   
+
                         </div>
                     </div>
 
 
-                    
+
+
+
+
 
                     <!--Body End-->
 
