--- a/angular/src/app/main/TasksCheckList/tasks/tasks.component.html
+++ b/angular/src/app/main/TasksCheckList/tasks/tasks.component.html
@@ -1,39 +1,229 @@
-<p>tasks works!</p>
+<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
+    <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="kt-portlet" id="kt_portlet">
 
-<div style="margin-top:5px; float:right">
-    <input type="button" class="btn btn-primary" value="Create New Task"
-           (click)="RedirectToCreateTask()"/>
-</div>
+                    <div class="kt-portlet__head">
+                        <div class="kt-portlet__head-label">
+                            <span class="kt-portlet__head-icon">
+                                <i class="flaticon-calendar"></i>
+                            </span>
+                            <h3 class="kt-portlet__head-title">
+                                Checklist
+                            </h3>
+                        </div>
+                        <div class="kt-portlet__head-toolbar">
+                            <a (click)="RedirectToCreateTask()" class="btn btn-brand btn-elevate"
+                                value="Create New Task">
+                                <i class="la la-plus"></i>
+                                Create new task
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="kt-portlet__body">
+                        <div class="fc fc-ltr fc-unthemed">
+                            <div class="fc-toolbar fc-header-toolbar">
+                                <div class="fc-left">
+                                    <div class="fc-button-group">
+                                        <button type="button" class="fc-prev-button fc-button fc-button-primary"
+                                            aria-label="prev"><span
+                                                class="fc-icon fc-icon-chevron-left"></span></button>
+                                        <button type="button" class="fc-next-button fc-button fc-button-primary"
+                                            aria-label="next"><span
+                                                class="fc-icon fc-icon-chevron-right"></span></button>
+                                    </div>
+                                    <button type="button" class="fc-today-button fc-button fc-button-primary"
+                                        disabled="">today</button>
+                                </div>
+                                <div class="col-md-3 kt-margin-b-20-tablet-and-mobile">
+                                    <div class="kt-input-icon kt-input-icon--left">
+                                        <input type="text" class="form-control" placeholder="Search..."
+                                            id="generalSearch">
+                                        <span class="kt-input-icon__icon kt-input-icon__icon--left">
+                                            <span><i class="la la-search"></i></span>
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="fc-right">
+                                    <ul class="filter-by-user">
+                                        <li class="kt-user-card-v2">
+                                            <div class="kt-user-card-v2__pic">
+                                                <img alt="photo" src="assets/media/users/100_10.jpg">
+                                            </div>
+                                        </li>
+                                        <li class="kt-user-card-v2">
+                                            <div class="kt-user-card-v2__pic">
+                                                <img alt="photo" src="assets/media/users/100_11.jpg">
+                                            </div>
+                                        </li>
+                                        <li class="kt-user-card-v2">
+                                            <div class="kt-user-card-v2__pic">
+                                                <img alt="photo" src="assets/media/users/100_9.jpg">
+                                            </div>
+                                        </li>
+                                        <li class="kt-user-card-v2">
+                                            <div class="kt-user-card-v2__pic">
+                                                <img alt="photo" src="assets/media/users/100_13.jpg">
+                                            </div>
+                                        </li>
+
+                                    </ul>
+                                    <div class="fc-button-group">
+                                        <button type="button" class="fc-prev-button fc-button fc-button-primary"
+                                            aria-label="prev"><span
+                                                class="fa fa-calendar-alt"></span>&nbsp;&nbsp;January 2020</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="kt-portlet__body kt-portlet__body--fit">
+                            <div class="kt-datatable kt-datatable--default kt-datatable--brand kt-datatable--loaded"
+                                id="column_rendering" style="">
+                                <table class="kt-datatable__table" style="display: block;">
+                                    <tbody class="kt-datatable__body" style="">
+                                        <tr data-row="0" class="kt-datatable__row" style="left: 0px;">
+
+                                            <td data-field="ShipDate" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">2/12/2018</span></td>
+                                            <td data-field="CompanyName" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">Gleichner, Ziemann and Gutkowski</span></td>
+                                            <td data-field="Type" data-autohide-disabled="false"
+                                                class="kt-datatable__cell"><span style="width: 145px;"><span
+                                                        class="btn btn-secondary btn-sm">Retail</span></span>
+                                            </td>
+                                            <td data-field="Status" class="kt-datatable__cell"><span
+                                                    style="width: 145px;"><span
+                                                        class="kt-badge  kt-badge--primary kt-badge--inline kt-badge--pill">Canceled</span></span>
+                                            </td>
+
+                                            <td data-field="OrderID" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">
+                                                    <div class="kt-user-card-v2">
+                                                        <div class="kt-user-card-v2__pic">
+                                                            <div class="kt-badge kt-badge--xl kt-badge--primary">N</div>
+                                                        </div>
+                                                        <div class="kt-user-card-v2__details"> <span
+                                                                class="kt-user-card-v2__name">Nixie Sailor</span> </div>
+                                                    </div>
+                                                </span>
+                                            </td>
+
+                                        </tr>
+
+                                        <tr data-row="1" class="kt-datatable__row kt-datatable__row--even"
+                                            style="left: 0px;">
+
+                                            <td data-field="ShipDate" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">8/6/2017</span></td>
+                                            <td data-field="CompanyName" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">Rosenbaum-Reichel</span></td>
+                                            <td data-field="Type" data-autohide-disabled="false"
+                                                class="kt-datatable__cell"><span style="width: 145px;"><span
+                                                        class="btn btn-secondary btn-sm">Direct</span></span>
+                                            </td>
+                                            <td data-field="Status" class="kt-datatable__cell"><span
+                                                    style="width: 145px;"><span
+                                                        class="kt-badge  kt-badge--danger kt-badge--inline kt-badge--pill">Danger</span></span>
+                                            </td>
+                                            <td data-field="OrderID" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">
+                                                    <div class="kt-user-card-v2">
+                                                        <div class="kt-user-card-v2__pic"> <img alt="photo"
+                                                                src="assets/media/users/100_10.jpg"> </div>
+                                                        <div class="kt-user-card-v2__details"> <span
+                                                                class="kt-user-card-v2__name">Emelita Giraldez</span>
+                                                        </div>
+                                                    </div>
+                                                </span>
+                                            </td>
+
+                                        </tr>
+                                        <tr data-row="2" class="kt-datatable__row" style="left: 0px;">
+
+                                            <td data-field="ShipDate" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">5/26/2016</span></td>
+                                            <td data-field="CompanyName" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">Kulas, Cassin and Batz</span></td>
+                                            <td data-field="Type" data-autohide-disabled="false"
+                                                class="kt-datatable__cell"><span style="width: 145px;"><span
+                                                        class="btn btn-secondary btn-sm">Retail</span></span>
+                                            </td>
+                                            <td data-field="Status" class="kt-datatable__cell"><span
+                                                    style="width: 145px;"><span
+                                                        class="kt-badge kt-badge--brand kt-badge--inline kt-badge--pill">Pending</span></span>
+                                            </td>
+                                            <td data-field="OrderID" class="kt-datatable__cell"><span
+                                                    style="width: 145px;">
+                                                    <div class="kt-user-card-v2">
+                                                        <div class="kt-user-card-v2__pic">
+                                                            <div class="kt-badge kt-badge--xl kt-badge--info">U</div>
+                                                        </div>
+                                                        <div class="kt-user-card-v2__details"> <span
+                                                                class="kt-user-card-v2__name">Ula Luckin</span></div>
+                                                    </div>
+                                                </span>
+                                            </td>
+
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                                <div class="kt-datatable__pager kt-datatable--paging-loaded">
+                                    <ul class="kt-datatable__pager-nav">
+                                        <li><a title="First"
+                                                class="kt-datatable__pager-link kt-datatable__pager-link--first kt-datatable__pager-link--disabled"
+                                                data-page="1" disabled="disabled"><i
+                                                    class="flaticon2-fast-back"></i></a></li>
+                                        <li><a title="Previous"
+                                                class="kt-datatable__pager-link kt-datatable__pager-link--prev kt-datatable__pager-link--disabled"
+                                                data-page="1" disabled="disabled"><i class="flaticon2-back"></i></a>
+                                        </li>
+                                        <li style=""></li>
+                                        <li style="display: none;">
+                                            <input type="text" class="kt-pager-input form-control" title="Page number">
+                                        </li>
+                                        <li><a class="kt-datatable__pager-link kt-datatable__pager-link-number kt-datatable__pager-link--active"
+                                                data-page="1" title="1">1</a></li>
+                                        <li><a class="kt-datatable__pager-link kt-datatable__pager-link-number"
+                                                data-page="2" title="2">2</a></li>
+                                        <li><a class="kt-datatable__pager-link kt-datatable__pager-link-number"
+                                                data-page="3" title="3">3</a></li>
+                                        <li><a class="kt-datatable__pager-link kt-datatable__pager-link-number"
+                                                data-page="4" title="4">4</a></li>
+                                        <li style=""></li>
+                                        <li><a title="Next"
+                                                class="kt-datatable__pager-link kt-datatable__pager-link--next"
+                                                data-page="2"><i class="flaticon2-next"></i></a></li>
+                                        <li><a title="Last"
+                                                class="kt-datatable__pager-link kt-datatable__pager-link--last"
+                                                data-page="4"><i class="flaticon2-fast-next"></i></a></li>
+                                    </ul>
+                                    <div class="kt-datatable__pager-info">
+                                        <div class="dropdown bootstrap-select kt-datatable__pager-size"
+                                            style="width: 60px;">
+                                            <select class="selectpicker kt-datatable__pager-size"
+                                                title="Select page size" data-width="60px" data-container="body"
+                                                data-selected="10" tabindex="-98">
+                                                <option class="bs-title-option" value=""></option>
+                                                <option value="10">10</option>
+                                                <option value="20">20</option>
+                                                <option value="30">30</option>
+                                                <option value="50">50</option>
+                                                <option value="100">100</option>
+                                            </select>
 
 
+                                        </div><span class="kt-datatable__pager-detail">Showing 1 - 10 of 40</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-
-<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
-    <div class="row">
-   <div class="col-lg-12">	
-       <!--begin::Portlet-->
-    <div class="kt-portlet" id="kt_portlet">
-        <div class="kt-portlet__head">
-            <div class="kt-portlet__head-label">
-                <span class="kt-portlet__head-icon">
-                    <i class="flaticon-calendar"></i>
-                </span>
-                <h3 class="kt-portlet__head-title">
-                    List View
-                </h3>
-            </div>
-            <div class="kt-portlet__head-toolbar">
-                <a href="#" class="btn btn-brand btn-elevate">
-                    <i class="la la-plus"></i>
-                    Add Event
-                </a>
             </div>
         </div>
-        <div class="kt-portlet__body">
-            <div id="kt_calendar"></div>
-        </div>
-    </div>	
-    <!--end::Portlet-->
-</div>
-</div>
+    </div>
 </div>
